@@ -3,7 +3,7 @@
 use warnings;
 use strict;
 
-use Test::More tests => 6;
+use Test::More tests => 10;
 
 use lib 't';
 use Util;
@@ -13,6 +13,15 @@ prep_environment();
 RUBY_AND_RAKE: {
     do_ruby_test( qw( -f --show-types t/swamp/Rakefile ) );
     do_ruby_test( qw( -g \bRakef --show-types t/swamp ) );
+}
+
+
+REQUIRE_F_OR_G: {
+    my ( $stdout, $stderr ) = run_ack_with_stderr('--show-types');
+    is_empty_array($stdout, 'No output');
+    is(scalar(@{$stderr}), 1, 'A single line should be present on standard error');
+    like($stderr->[0], qr/--show-types can only be used with -f or -g./, 'Right error message' );
+    is(get_rc(), 255, 'The ack command should not fail');
 }
 
 
